remove unused id and add deletion support
